Fix: Aggiorno URL API online

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             try {
                 // --- QUESTA È LA PARTE CHIAVE ---
                 // Invia la domanda alla nostra API FastAPI locale
-                const response = await fetch('http://127.0.0.1:8000/ask', {
+                const response = await fetch('https://sindacato-app.onrender.com/ask', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
