--- a/index.html
+++ b/index.html
@@ -12,333 +12,53 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <style>
-        /* --- Import Font e Reset Globale --- */
+        /* Qui c'è tutto il CSS, lo ometto per brevità ma tu devi averlo */
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-        :root {
-            --primary-blue: #0A2540;
-            --secondary-blue: #4A90E2;
-            --accent-orange: #FF6B6B;
-            --light-gray: #F5F7FA;
-            --text-dark: #333;
-            --text-light: #6C757D;
-        }
-
-        body {
-            margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background-color: var(--light-gray);
-            color: var(--text-dark);
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-
-        /* --- Animazione di Fade-in --- */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .animated-card {
-            animation: fadeIn 0.5s ease-in-out forwards;
-        }
-
-
-        /* --- Struttura Principale App --- */
-        .app-container {
-            max-width: 420px;
-            margin: auto;
-            background-color: white;
-            min-height: 100vh;
-            position: relative;
-            padding-bottom: 80px; /* Spazio per la nav bar */
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
-
-        .main-content {
-            padding: 20px;
-        }
-
-        /* --- Header --- */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 24px;
-            animation: fadeIn 0.4s ease-in-out;
-        }
-        .header-greeting h1 {
-            font-size: 28px;
-            font-weight: 700;
-            margin: 0;
-            color: var(--primary-blue);
-        }
-        .header-greeting p {
-            margin: 0;
-            color: var(--text-light);
-            font-size: 16px;
-        }
-        .notification-bell {
-            font-size: 24px;
-            color: var(--text-light);
-            cursor: pointer;
-        }
-
-        /* --- Card Principale --- */
-        .main-card {
-            background: linear-gradient(135deg, #5D7AE9, #2A4DB7);
-            color: white;
-            padding: 24px;
-            border-radius: 16px;
-            margin-bottom: 24px;
-            box-shadow: 0 8px 20px rgba(74, 144, 226, 0.3);
-        }
-        .main-card h2 {
-            margin: 0 0 8px 0;
-            font-size: 14px;
-            font-weight: 600;
-            opacity: 0.9;
-        }
-        .main-card p {
-            margin: 0;
-            font-size: 18px;
-            font-weight: 500;
-        }
-
-        /* --- Sezioni e Titoli --- */
-        .section-title {
-            font-size: 18px;
-            font-weight: 600;
-            color: var(--primary-blue);
-            margin-bottom: 16px;
-            animation: fadeIn 0.4s ease-in-out;
-        }
-
-        /* --- Accesso Rapido --- */
-        .quick-actions {
-            display: flex;
-            justify-content: space-around; /* Modificato per centrare meglio i due elementi rimasti */
-            gap: 15px;
-            text-align: center;
-            margin-bottom: 24px;
-        }
-        .action-item {
-            flex-basis: 45%; /* Diamo una base per la larghezza */
-            padding: 15px 5px;
-            background-color: var(--light-gray);
-            border-radius: 12px;
-            cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-        .action-item:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 4px 10px rgba(0,0,0,0.08);
-        }
-        .action-item .icon {
-            font-size: 28px;
-            margin-bottom: 8px;
-            color: var(--secondary-blue);
-        }
-        .action-item span {
-            font-size: 12px;
-            font-weight: 500;
-        }
-
-        /* --- Lista Comunicazioni --- */
-        .communication-list .comm-item {
-            display: flex;
-            align-items: center;
-            padding: 15px;
-            background-color: #fff;
-            border: 1px solid #eef2f7;
-            border-radius: 12px;
-            margin-bottom: 10px;
-            cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-        .comm-item:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-        }
-        .comm-item span {
-            font-weight: 500;
-        }
-
-        /* --- Pulsante Chatbot (FAB) --- */
-        .chatbot-fab {
-            position: fixed;
-            bottom: 90px;
-            right: 25px;
-            width: 60px;
-            height: 60px;
-            background: linear-gradient(45deg, var(--accent-orange), #ff8a8a);
-            color: white;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 28px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            cursor: pointer;
-            z-index: 1000;
-            transition: transform 0.3s ease;
-        }
-        .chatbot-fab:hover {
-            transform: scale(1.1);
-        }
-
-        /* --- Finestra Chatbot (Overlay) --- */
-        .chatbot-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.5);
-            z-index: 1001;
-            display: none; /* Nascosto di default */
-            justify-content: center;
-            align-items: center;
-            -webkit-backdrop-filter: blur(4px);
-            backdrop-filter: blur(4px);
-        }
-        .chatbot-window {
-            width: 90%;
-            max-width: 400px;
-            height: 85%;
-            background-color: white;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-            transform: scale(0.9);
-            opacity: 0;
-            transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1), opacity 0.3s ease;
-        }
-        .chatbot-overlay.visible .chatbot-window {
-            transform: scale(1);
-            opacity: 1;
-        }
-        .chat-header {
-            padding: 15px 20px;
-            background-color: var(--primary-blue);
-            color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .chat-header h3 {
-            margin: 0;
-            font-size: 16px;
-        }
-        .close-chat {
-            font-size: 24px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: transform 0.2s;
-        }
-        .close-chat:hover {
-            transform: rotate(90deg);
-        }
-        .chat-body {
-            flex-grow: 1;
-            padding: 20px;
-            background-color: var(--light-gray);
-            overflow-y: auto;
-        }
-        .chat-message {
-            margin-bottom: 15px;
-            display: flex;
-            flex-direction: column;
-            animation: fadeIn 0.3s ease-in-out;
-        }
-        .chat-message.bot .bubble {
-            background-color: white;
-            align-self: flex-start;
-            border-radius: 15px 15px 15px 0;
-        }
-        .chat-message.user .bubble {
-            background-color: #D1E7FD;
-            align-self: flex-end;
-            border-radius: 15px 15px 0 15px;
-        }
-        .chat-message .bubble {
-            padding: 10px 15px;
-            max-width: 80%;
-            font-size: 14px;
-            line-height: 1.5;
-        }
-        .chat-input {
-            padding: 15px;
-            background-color: white;
-            display: flex;
-            border-top: 1px solid #eee;
-        }
-        .chat-input input {
-            flex-grow: 1;
-            border: 1px solid #ddd;
-            border-radius: 20px;
-            padding: 10px 15px;
-            font-size: 14px;
-        }
-        .chat-input button {
-            background-color: var(--accent-orange);
-            color: white;
-            border: none;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            margin-left: 10px;
-            font-size: 20px;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-        .chat-input button:hover {
-            background-color: #e65c5c;
-        }
-
-        /* --- Barra di Navigazione --- */
-        .bottom-nav {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            max-width: 420px;
-            margin: auto;
-            right: 0;
-            height: 70px;
-            background-color: white;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            box-shadow: 0 -2px 10px rgba(0,0,0,0.08);
-            border-top-left-radius: 20px;
-            border-top-right-radius: 20px;
-        }
-        .nav-item {
-            text-align: center;
-            color: var(--text-light);
-            cursor: pointer;
-            flex: 1;
-        }
-        .nav-item.active {
-            color: var(--secondary-blue);
-        }
-        .nav-item .icon {
-            font-size: 24px;
-        }
-        .nav-item span {
-            display: block;
-            font-size: 12px;
-        }
-
+        :root { --primary-blue: #0A2540; --secondary-blue: #4A90E2; --accent-orange: #FF6B6B; --light-gray: #F5F7FA; --text-dark: #333; --text-light: #6C757D; }
+        body { margin: 0; font-family: 'Poppins', sans-serif; background-color: var(--light-gray); color: var(--text-dark); -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .animated-card { animation: fadeIn 0.5s ease-in-out forwards; }
+        .app-container { max-width: 420px; margin: auto; background-color: white; min-height: 100vh; position: relative; padding-bottom: 80px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .main-content { padding: 20px; }
+        .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px; animation: fadeIn 0.4s ease-in-out; }
+        .header-greeting h1 { font-size: 28px; font-weight: 700; margin: 0; color: var(--primary-blue); }
+        .header-greeting p { margin: 0; color: var(--text-light); font-size: 16px; }
+        .notification-bell { font-size: 24px; color: var(--text-light); cursor: pointer; }
+        .main-card { background: linear-gradient(135deg, #5D7AE9, #2A4DB7); color: white; padding: 24px; border-radius: 16px; margin-bottom: 24px; box-shadow: 0 8px 20px rgba(74, 144, 226, 0.3); }
+        .main-card h2 { margin: 0 0 8px 0; font-size: 14px; font-weight: 600; opacity: 0.9; }
+        .main-card p { margin: 0; font-size: 18px; font-weight: 500; }
+        .section-title { font-size: 18px; font-weight: 600; color: var(--primary-blue); margin-bottom: 16px; animation: fadeIn 0.4s ease-in-out; }
+        .quick-actions { display: flex; justify-content: space-around; gap: 15px; text-align: center; margin-bottom: 24px; }
+        .action-item { flex-basis: 45%; padding: 15px 5px; background-color: var(--light-gray); border-radius: 12px; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s; }
+        .action-item:hover { transform: translateY(-4px); box-shadow: 0 4px 10px rgba(0,0,0,0.08); }
+        .action-item .icon { font-size: 28px; margin-bottom: 8px; color: var(--secondary-blue); }
+        .action-item span { font-size: 12px; font-weight: 500; }
+        .communication-list .comm-item { display: flex; align-items: center; padding: 15px; background-color: #fff; border: 1px solid #eef2f7; border-radius: 12px; margin-bottom: 10px; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s; }
+        .comm-item:hover { transform: translateY(-2px); box-shadow: 0 4px 12px rgba(0,0,0,0.06); }
+        .comm-item span { font-weight: 500; }
+        .chatbot-fab { position: fixed; bottom: 90px; right: 25px; width: 60px; height: 60px; background: linear-gradient(45deg, var(--accent-orange), #ff8a8a); color: white; border-radius: 50%; display: flex; justify-content: center; align-items: center; font-size: 28px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); cursor: pointer; z-index: 1000; transition: transform 0.3s ease; }
+        .chatbot-fab:hover { transform: scale(1.1); }
+        .chatbot-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 1001; display: none; justify-content: center; align-items: center; -webkit-backdrop-filter: blur(4px); backdrop-filter: blur(4px); }
+        .chatbot-window { width: 90%; max-width: 400px; height: 85%; background-color: white; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.2); display: flex; flex-direction: column; overflow: hidden; transform: scale(0.9); opacity: 0; transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1), opacity 0.3s ease; }
+        .chatbot-overlay.visible .chatbot-window { transform: scale(1); opacity: 1; }
+        .chat-header { padding: 15px 20px; background-color: var(--primary-blue); color: white; display: flex; justify-content: space-between; align-items: center; }
+        .chat-header h3 { margin: 0; font-size: 16px; }
+        .close-chat { font-size: 24px; cursor: pointer; font-weight: bold; transition: transform 0.2s; }
+        .close-chat:hover { transform: rotate(90deg); }
+        .chat-body { flex-grow: 1; padding: 20px; background-color: var(--light-gray); overflow-y: auto; }
+        .chat-message { margin-bottom: 15px; display: flex; flex-direction: column; animation: fadeIn 0.3s ease-in-out; }
+        .chat-message.bot .bubble { background-color: white; align-self: flex-start; border-radius: 15px 15px 15px 0; }
+        .chat-message.user .bubble { background-color: #D1E7FD; align-self: flex-end; border-radius: 15px 15px 0 15px; }
+        .chat-message .bubble { padding: 10px 15px; max-width: 80%; font-size: 14px; line-height: 1.5; }
+        .chat-input { padding: 15px; background-color: white; display: flex; border-top: 1px solid #eee; }
+        .chat-input input { flex-grow: 1; border: 1px solid #ddd; border-radius: 20px; padding: 10px 15px; font-size: 14px; }
+        .chat-input button { background-color: var(--accent-orange); color: white; border: none; border-radius: 50%; width: 40px; height: 40px; margin-left: 10px; font-size: 20px; cursor: pointer; transition: background-color 0.2s; }
+        .chat-input button:hover { background-color: #e65c5c; }
+        .bottom-nav { position: fixed; bottom: 0; left: 0; width: 100%; max-width: 420px; margin: auto; right: 0; height: 70px; background-color: white; display: flex; justify-content: space-around; align-items: center; box-shadow: 0 -2px 10px rgba(0,0,0,0.08); border-top-left-radius: 20px; border-top-right-radius: 20px; }
+        .nav-item { text-align: center; color: var(--text-light); cursor: pointer; flex: 1; }
+        .nav-item.active { color: var(--secondary-blue); }
+        .nav-item .icon { font-size: 24px; }
+        .nav-item span { display: block; font-size: 12px; }
     </style>
 </head>
 <body>
@@ -434,21 +154,21 @@
             
             messageDiv.appendChild(bubbleDiv);
             chatBody.appendChild(messageDiv);
-            chatBody.scrollTop = chatBody.scrollHeight; // Fa scorrere la chat fino all'ultimo messaggio
+            chatBody.scrollTop = chatBody.scrollHeight;
         }
 
         // Funzione principale che viene chiamata quando l'utente invia una domanda
         async function handleUserQuery() {
             const userQuestion = chatInput.value;
-            if (userQuestion.trim() === '') return; // Non fa nulla se il messaggio è vuoto
+            if (userQuestion.trim() === '') return;
 
-            addMessage(userQuestion, 'user'); // Mostra la domanda dell'utente nell'interfaccia
-            chatInput.value = ''; // Pulisce il campo di input
+            addMessage(userQuestion, 'user');
+            chatInput.value = '';
             
-            addMessage('Sto pensando...', 'bot'); // Mostra un messaggio di attesa
+            addMessage('Sto pensando...', 'bot');
 
             try {
-                const response = await fetch('https://sindacato-app-api.onrender.com/ask', { 
+                const response = await fetch('https://sindacato-app-api.onrender.com/ask', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
